# Spotify-Playlist-Recommender

./: .gitignore  LICENSE  README.md  pyproject.toml  run_ui.sh  todo.md  train.py
.streamlit/: config.toml
data/scripts/: load-and-prepare.sh  load-playlists.sh  load-tracks.sh  playlists_to_parquet.py  prepare_data.py  tracks_to_parquet.py
src/recommender/: data.py  head.py  layers.py  model.py  model_config.py  trainer.py
src/ui/: app.py
