[project]
name = "spotify-playlist-recommender"
version = "0.1.0"
description = "-"
readme = "README.md"
requires-python = ">=3.11.1"

dependencies = [
    "ipykernel>=7.2.0",
    "kaggle==2.0.0",
    "kagglehub[pandas-datasets]==1.0.0",
    "torch==2.8.0",
    "pandas<3.0.0",
    "pyarrow<23.0.0",
    "tqdm<4.67.0",
    "huggingface-hub<1.4.0",
    "sentence-transformers<5.3.0",
    "structlog<25.2.0",
    "python-dotenv<=1.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["recommender*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
